add invalid login error message translation

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -1,6 +1,7 @@
 {
   "Login": "Login",
   "Logout": "Logout",
+  "Invalid login": "Invalid userid or password",
   "Welcome": "Welcome",
   "Dashboard": "Dashboard",
   "User ID": "User ID",
