--- a/frontend/src/assets/i18n/ch.json
+++ b/frontend/src/assets/i18n/ch.json
@@ -1,6 +1,7 @@
 {
   "Login": "登录",
   "Logout": "登出",
+  "Invalid login": "无效的用户名或密码",
   "Welcome": "欢迎页",
   "Dashboard": "仪表板",
   "User ID": "用户身份",
