added view dashboard button on welcome page

--- a/frontend/src/assets/i18n/ch.json
+++ b/frontend/src/assets/i18n/ch.json
@@ -8,6 +8,7 @@
   "Username": "用户名",
   "Password": "密码",
   "Welcome back,": "欢迎回来，",
+  "View Dashboard": "查看仪表板",
   "Role": "职位",
   "Dashboard Title": "欢迎来到经理的仪表板！",
   "Dashboard Fine Print": "此页面仅限于具有“经理”角色的帐户。 其他角色将无法访问或查看此页面。"
