--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -8,6 +8,7 @@
   "Username": "Username",
   "Password": "Password",
   "Welcome back,": "Welcome back,",
+  "View Dashboard": "View Dashboard",
   "Role": "Role",
   "Dashboard Title": "WELCOME TO THE MANAGERS' DASHBOARD!",
   "Dashboard Fine Print": "THIS PAGE IS RESTRICTED FOR ACCOUNTS WITH \"MANAGER\" ROLE ONLY. OTHER ROLES WILL NOT BE ABLE TO ACCESS/VIEW THIS PAGE."
